--- a/help/src/sakai_podcasts/aucy.html
+++ b/help/src/sakai_podcasts/aucy.html
@@ -1,20 +1,18 @@
-<html>
-<head>
-	<title>Podcasts: Overview</title>
-	<style type="text/css">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html><head>
+<title>Podcasts: Overview</title>
+<style type="text/css">
 		/* Style for specific inline images */
 		
 		/* Style for specific ordered lists */
 		
 		/* Style for specific table cells */
-	</style>
-	<link type="text/css" href="/library/skin/tool_base.css" rel="stylesheet" />
-	<link type="text/css" href="/library/skin/default/tool.css" rel="stylesheet" />
+		</style>
+<link type="text/css" href="/library/skin/tool_base.css" media="all" rel="stylesheet" />
+<link type="text/css" href="/library/skin/default/tool.css" media="all" rel="stylesheet" />
 </head>
-
 <body>
-<div class="helpbody">
-
+<div class="helpBody">
 <h2>Podcasts: Overview</h2>
 
 <h3>What it does</h3>
@@ -37,20 +35,15 @@ supported within a podcast, including <code>.mp3</code>,
 
 <p><strong>Adding the Podcasts tool:</strong> You can add the Podcasts
 tool to your site using Site
-Setup. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools on the menubar using Site Setup</a>.</p>
+Info. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.</p>
 
 <h3>Things to consider</h3>
 
 <ul><li>You can download and view podcasts on most computers with
 podcatcher software. You do not need to own an iPod to view podcasts.
 
-<br><br>
-</li><li>For Indiana University students, faculty, and staff, podcatcher
-software is available free of charge and available for download via
-IUware Online.
+
 </li></ul>
- <hr />
-</div>
  
- </body>
- </html>
+</div>
+</body></html>
