--- a/help/src/sakai_podcasts/audn.html
+++ b/help/src/sakai_podcasts/audn.html
@@ -1,23 +1,21 @@
-<html>
-<head>
-	<title>Downloading or subscribing to a podcast</title>
-	<style type="text/css">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html><head>
+<title>Downloading or subscribing to a
+podcast</title>
+<style type="text/css">
 		/* Style for specific inline images */
 		
 		/* Style for specific ordered lists */
 		
 		/* Style for specific table cells */
-	</style>
-	<link type="text/css" href="/library/skin/tool_base.css" rel="stylesheet" />
-	<link type="text/css" href="/library/skin/default/tool.css" rel="stylesheet" />
+		</style>
+<link type="text/css" href="/library/skin/tool_base.css" media="all" rel="stylesheet" />
+<link type="text/css" href="/library/skin/default/tool.css" media="all" rel="stylesheet" />
 </head>
-
 <body>
-
-<div class="helpbody">
-
-<h2>Downloading or subscribing to a podcast</h2>
-
+<div class="helpBody">
+<h2>Downloading or subscribing to a
+podcast</h2>
 <p>Using the Podcasts tool, you can download individual podcasts or
 subscribe to an RSS feed.</p>
 
@@ -26,8 +24,8 @@ subscribe to an RSS feed.</p>
 <p>To download an individual podcast, follow these
 steps:</p>
 
-<ol id=""><li>To see a list of podcasts, in your site's <a href="content.hlp?docId=arcc">menubar</a>,
-click <strong><code>Podcasts</code></strong>.<br><br>
+<ol><li>To see a list of podcasts, in your site's <a href="content.hlp?docId=arcc">menubar</a>,
+click <strong><code>Podcasts</code></strong>.<br /><br />
 </li><li>Find the podcast you want, and under its title, click
 <strong><code>Download</code></strong>.
 
@@ -41,9 +39,6 @@ computer.
 
 <p>To subscribe to an RSS feed of podcasts for your site, copy and
 paste the RSS feed URL into your podcatcher application.</p>
-<hr />
 
 </div>
-
-</body>
-</html>
+</body></html>
