--- a/help/src/sakai_podcasts/audo.html
+++ b/help/src/sakai_podcasts/audo.html
@@ -1,38 +1,33 @@
-<html>
-<head>
-	<title>Editing information about the RSS feed in Podcasts</title>
-	<style type="text/css">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html><head>
+<title>Editing information about the RSS feed in
+Podcasts</title>
+<style type="text/css">
 		/* Style for specific inline images */
 		
 		/* Style for specific ordered lists */
 		
 		/* Style for specific table cells */
-	</style>
-	<link type="text/css" href="/library/skin/tool_base.css" rel="stylesheet" />
-	<link type="text/css" href="/library/skin/default/tool.css" rel="stylesheet" />
+		</style>
+<link type="text/css" href="/library/skin/tool_base.css" media="all" rel="stylesheet" />
+<link type="text/css" href="/library/skin/default/tool.css" media="all" rel="stylesheet" />
 </head>
-
 <body>
-
-<div class="helpbody">
-
-<h2>Editing information about the RSS feed in Podcasts</h2>
-
+<div class="helpBody">
+<h2>Editing information about the RSS feed in
+Podcasts</h2>
 <p>In Podcasts, to change the title and description of the RSS feed,
 follow these steps:</p>
 
-<ol id=""><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.
-<br><br>
-</li><li>Under the RSS feed URL, click <strong><code>Revise</code></strong>.<br><br>
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.
+<br /><br />
+</li><li>Under the RSS feed URL, click <strong><code>Revise</code></strong>.<br /><br />
 </li><li>You can change the title and description of the RSS feed, which
 will be available to your site participants through their podcatcher
-applications.<br><br>
+applications.<br /><br />
 </li><li>When you're finished, click <strong><code>Save Changes</code></strong>.
 </li></ol>
 
-<hr />
 
 </div>
-
-</body>
-</html>
+</body></html>
