SAK-7042 Automatic updates of 2.3.x help content from IU KB
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@20022 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/help/src/sakai_podcasts/audp.html
+++ b/help/src/sakai_podcasts/audp.html
@@ -54,13 +54,10 @@ podcasts.</p>
 <ol><li>From your site's menubar, click <strong><code>Podcasts</code></strong>.<br /><br />
 </li><li>Near the top, click <strong><code>Permissions</code></strong>.<br /><br />
 </li><li>On the Permissions screen, you can add permissions based on
-participant roles. Available permissions are as follows:<br /><br />
+participant roles. Available permissions are as follows:
 
-<ul><li><strong>New:</strong> Add new podcasts
-</li><li><strong>Read:</strong> View or download podcasts
-</li><li><strong>Revise:</strong> Edit podcast information
-</li><li><strong>Delete:</strong> Remove podcasts
-</li></ul><br />
+<table class="noborder" cellpadding="4"><col /><col /><tr valign="top"><th align="left" class="noborder">New </th><td align="left" class="noborder">Add new podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Read </th><td align="left" class="noborder">View or download podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Revise </th><td align="left" class="noborder">Edit podcast information</td></tr><tr valign="top"><th align="left" class="noborder">Delete </th><td align="left" class="noborder">Remove podcasts
+</td></tr></table>
 </li><li>When you're finished, click <strong><code>Save Changes</code></strong>.
 </li></ol>
 
