SAK-7042 Automatic updates of 2.3.x help content from IU KB
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@20092 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/help/src/sakai_podcasts/aucy.html
+++ b/help/src/sakai_podcasts/aucy.html
@@ -28,7 +28,7 @@ audio lectures, video presentations, and slideshow presentations.</p>
 podcasts individually or subscribe to an RSS feed, which allows
 podcasts to be downloaded automatically to a podcatcher.</p>
 
-<p><strong>File Types:</strong> Several different file types are
+<p><strong>File types:</strong> Several different file types are
 supported within a podcast, including <code>.mp3</code>,
 <code>.mp4</code>, and <code>.ppt</code>.</p>
 
