--- a/help/src/sakai_podcasts/audb.html
+++ b/help/src/sakai_podcasts/audb.html
@@ -1,30 +1,27 @@
-<html>
-<head>
-	<title>Adding, editing, or deleting a podcast</title>
-	<style type="text/css">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html><head>
+<title>Adding, editing, or deleting a
+podcast</title>
+<style type="text/css">
 		/* Style for specific inline images */
 		
 		/* Style for specific ordered lists */
 		
 		/* Style for specific table cells */
-	</style>
-	<link type="text/css" href="/library/skin/tool_base.css" rel="stylesheet" />
-	<link type="text/css" href="/library/skin/default/tool.css" rel="stylesheet" />
+		</style>
+<link type="text/css" href="/library/skin/tool_base.css" media="all" rel="stylesheet" />
+<link type="text/css" href="/library/skin/default/tool.css" media="all" rel="stylesheet" />
 </head>
-		
 <body>
-
-<div class="helpbody">
-
-<h2>Adding, editing, or deleting a podcast</h2>
-
+<div class="helpBody">
+<h2>Adding, editing, or deleting a
+podcast</h2>
 <a name="top"> </a>
 
 <p><strong>Note:</strong> To complete the procedures in this
 document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>. To view a list of permissions
-associated with a given role, see <a href="content.hlp?docId=armh">Permissions, roles, and tools</a>. For a basic understanding of roles and
-permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overview</a>.</p>
+permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>On this page:</p>
 
@@ -33,7 +30,7 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overvie
 <ul><li><a href="#add">Adding a podcast</a></li><li><a href="#edit">Editing podcast information</a></li><li><a href="#delete">Deleting a podcast</a>
 </li></ul>
 
-<hr>
+<hr />
 
 <a name="add"> </a>
 
@@ -43,25 +40,20 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overvie
 sharing with your site participants. To add a podcast, follow these
 steps:</p>
 
-<ol id=""><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools on the menubar using Site Setup</a>.)<br><br>
-</li><li>Near the top, click <strong><code>Add</code></strong>.<br><br>
+it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+</li><li>Near the top, click <strong><code>Add</code></strong>.<br /><br />
 </li><li>Next to "Choose a file", click <strong><code>Browse</code></strong>, and then find and
 select the file you'd like to upload. Then click <strong><code>Open</code></strong>.
-<br><br>
+<br /><br />
 </li><li>Next to "Publish Date/Time", click the calendar icon, and then
 select the date and time you want your file to become
-available.<br><br>
+available.<br /><br />
 </li><li>Next to "Title", enter a title for your file in the text
-box.<br><br>
+box.<br /><br />
 </li><li>Under "Description", you may enter a brief description of the
-file.<br><br>
-</li><li>Next to "Email Notification", use the drop-down list to indicate
-whether or not to send participants email notifying them that the
-file is available. Choose either <strong><code>None - No notification</code></strong>,
-<strong><code>Low - Only participants who have opted in</code></strong>, or <strong><code>High - All
-participants</code></strong>.<br><br>
+file.<br /><br />
 </li><li>When you're finished, click <strong><code>Add</code></strong> to upload your file to
 Podcasts, or click <strong><code>Cancel</code></strong> to cancel the upload.
 </li></ol>
@@ -79,11 +71,11 @@ the date you published it.</p>
 change the date and time it's available, or choose another file to
 upload. To do so, follow these steps:</p>
 
-<ol id=""><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools on the menubar using Site Setup</a>.)<br><br>
+it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
 </li><li>Find the podcast you want to edit, and under its title, click
-<strong><code>Revise</code></strong>.<br><br>
+<strong><code>Revise</code></strong>.<br /><br />
 </li><li>When you're finished with your changes, click <strong><code>Save
 Changes</code></strong>.
 </li></ol>
@@ -96,11 +88,11 @@ Changes</code></strong>.
 
 <p>To delete a podcast, follow these steps:</p>
 
-<ol id=""><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools on the menubar using Site Setup</a>.)<br><br>
+it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
 </li><li>Find the podcast you want to delete, and under its title, click
-<strong><code>Delete</code></strong>.<br><br>
+<strong><code>Delete</code></strong>.<br /><br />
 </li><li>On the Deleting Podcast screen, to confirm the deletion, click
 <strong><code>Delete</code></strong>.
 </li></ol>
@@ -108,9 +100,8 @@ it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or r
 <p>Your podcast will be removed from the Podcasts screen.</p>
 
 <a href="#top">Back to top</a>
-<hr />
+
+<p />
 
 </div>
-
-</body>
-</html>
+</body></html>
