--- a/help/src/sakai_podcasts/audp.html
+++ b/help/src/sakai_podcasts/audp.html
@@ -1,28 +1,24 @@
-<html>
-<head>
-	<title>Managing access to podcasts</title>
-	<style type="text/css">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html><head>
+<title>Managing access to podcasts</title>
+<style type="text/css">
 		/* Style for specific inline images */
 		
 		/* Style for specific ordered lists */
 		
 		/* Style for specific table cells */
-	</style>
-	<link type="text/css" href="/library/skin/tool_base.css" rel="stylesheet" />
-	<link type="text/css" href="/library/skin/default/tool.css" rel="stylesheet" />
+		</style>
+<link type="text/css" href="/library/skin/tool_base.css" media="all" rel="stylesheet" />
+<link type="text/css" href="/library/skin/default/tool.css" media="all" rel="stylesheet" />
 </head>
-
 <body>
-
-<div class="helpbody">
-
+<div class="helpBody">
 <h2>Managing access to podcasts</h2>
 
 <p><strong>Note:</strong> To complete the procedures in this
 document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>. To view a list of permissions
-associated with a given role, see <a href="content.hlp?docId=armh">Permissions, roles, and tools</a>. For a basic understanding of roles and
-permissions, see <a href="content.hlp?docId=arax">Permissions and Roles: Overview</a>.</p>
+permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
+basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 
 <p>With the Podcasts tool, you can restrict access to your
@@ -34,16 +30,16 @@ is allowed to create, revise, and delete podcasts.</p>
 
 <p>To manage access to your podcasts, follow these steps:</p>
 
-<ol id=""><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.<br><br>
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.<br /><br />
 </li><li>Near the top, click <strong><code>Options</code></strong>, and use the radio buttons to
-choose one of the following:<br><br>
+choose one of the following:<br /><br />
 
 <ul><li>To provide public access to your podcast through a
 podcatcher, choose <strong><code>Display to non-members (publicly
 viewable)</code></strong>.
 </li><li>To restrict access to site participants only, and to disable
 access through a podcatcher, choose <strong><code>Display to site</code></strong>.
-</li></ul><br>
+</li></ul><br />
 </li><li>When you're finished, click <strong><code>Save Changes</code></strong>.
 </li></ol>
 
@@ -54,21 +50,15 @@ podcasts.</p>
 
 <p>To edit permissions, follow these steps:</p>
 
-<ol id=""><li>From your site's menubar, click <strong><code>Podcasts</code></strong>.<br><br>
-</li><li>Near the top, click <strong><code>Permissions</code></strong>.<br><br>
+<ol><li>From your site's menubar, click <strong><code>Podcasts</code></strong>.<br /><br />
+</li><li>Near the top, click <strong><code>Permissions</code></strong>.<br /><br />
 </li><li>On the Permissions screen, you can add permissions based on
-participant roles. Available permissions are as follows:<br><br>
+participant roles. Available permissions are as follows:
 
-<ul><li><strong>New:</strong> Add new podcasts
-</li><li><strong>Read:</strong> View or download podcasts
-</li><li><strong>Revise:</strong> Edit podcast information
-</li><li><strong>Delete:</strong> Remove podcasts
-</li></ul><br>
+<table class="noborder" cellpadding="4"><col /><col /><tr valign="top"><th align="left" class="noborder">New </th><td align="left" class="noborder">Add new podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Read </th><td align="left" class="noborder">View or download podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Revise </th><td align="left" class="noborder">Edit podcast information</td></tr><tr valign="top"><th align="left" class="noborder">Delete </th><td align="left" class="noborder">Remove podcasts
+</td></tr></table>
 </li><li>When you're finished, click <strong><code>Save Changes</code></strong>.
 </li></ol>
-<hr />
 
 </div>
-
-</body>
-</html>
+</body></html>
