NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@76954 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/help/src/sakai_podcasts/aucy.html
+++ b/help/src/sakai_podcasts/aucy.html
@@ -35,7 +35,7 @@ supported within a podcast, including <code>.mp3</code>,
 
 <p><strong>Adding the Podcasts tool:</strong> You can add the Podcasts
 tool to your site using Site
-Info. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.</p>
+Info; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.</p>
 
 <h3>Things to consider</h3>
 
@@ -45,9 +45,10 @@ podcatcher software. You do not need to own an iPod to consume podcasts.
 
 </li></ul>
  
+<h3>Help documentation</h3>
 
-
-
+<p>For help documentation about the Podcasts tool, see
+<a href="content.hlp?docId=aucz">Podcasts</a>.</p>
 
 </div>
 </body></html>
