--- a/help/src/sakai_podcasts/audo.html
+++ b/help/src/sakai_podcasts/audo.html
@@ -21,7 +21,8 @@ RSS feed:</p>
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.
 <br /><br />
-</li><li>Under the RSS feed URL, click <strong><code>Edit</code></strong>.<br /><br />
+</li><li>Under the RSS feed URL, click
+<strong><code>Edit</code></strong>.<br /><br />
 </li><li>You can change the title and description of the RSS feed, which
 will be available to your site participants through their
 podcatcher applications.<br /><br />
