--- a/help/src/sakai_podcasts/audp.html
+++ b/help/src/sakai_podcasts/audp.html
@@ -15,10 +15,10 @@
 <div class="helpBody">
 <h2>Managing access to podcasts</h2>
 
-<p><strong>Note:</strong> To complete the procedures in this
-document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+<p><strong>Note:</strong> To complete these procedures, you
+must be assigned a role having the necessary permissions.  To
+determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 
 <p>With the Podcasts tool, you can restrict access to your
@@ -63,13 +63,16 @@ changed in the Podcasts tool. Available permissions are as follows:
 </li><li>When you're finished, click <strong><code>Save</code></strong>.
 </li></ol>
 
-<p>To edit permissions from the Resources tool:</p>
+<p>To edit permissions that are set in the Resources tool:</p>
 
 <ol><li>From your site's menubar, click <strong><code>Resources</code></strong>.  <br /><br />
-</li><li>Check the box next to the <strong><code>Podcasts</code></strong> folder, and then click
-<strong><code>Permissions</code></strong>.  <br /><br />
-</li><li>All permissions are editable in Resources. <br /><br />
-</li><li>When you're finished, click <strong><code>Save</code></strong>.
+</li><li>On the Resources page, click <strong><code>Permissions</code></strong>.  <br /><br />
+
+<strong>Note:</strong> Permission changes made from this location will
+affect <strong>all</strong> items in the Resources tool. To edit
+permissions for an individual folder, see <a href="content.hlp?docId=audh">Changing the permissions for a folder in Resources</a>
+
+<br /><br /></li><li>When you're finished, click <strong><code>Save</code></strong>.
 </li></ol>
 
 </div>
