--- a/help/src/sakai_podcasts/audb.html
+++ b/help/src/sakai_podcasts/audb.html
@@ -18,10 +18,10 @@ podcast</title>
 podcast</h2>
 <a name="top"> </a>
 
-<p><strong>Note:</strong> To complete the procedures in this
-document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+<p><strong>Note:</strong> To complete these procedures, you
+must be assigned a role having the necessary permissions.  To
+determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>On this page:</p>
 
@@ -32,25 +32,27 @@ basic understanding of roles and permissions, see <a href="content.hlp?docId=ara
 
 <hr />
 
+<a name="add"> </a>
+
+<h4>Adding a podcast</h4>
+
+
 <p><strong>Note:</strong> Podcasts that you post on your site are
 stored in Resources. A <code>Podcasts</code> folder is automatically
 created in Resources when you add the Podcasts tool to your site.</p>
 
 
 
-<a name="add"> </a>
-
-<h4>Adding a podcast</h4>
 
 <p>The Podcasts tool allows you to upload a podcast for
 sharing with your site participants. To add a podcast:</p>
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+it; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
 </li><li>Near the top, click <strong><code>Add</code></strong>.<br /><br />
 </li><li>Next to "Choose a file", click <strong><code>Browse</code></strong>, and then find and
-select the file you'd like to upload. Then click <strong><code>Open</code></strong>.
+select the file you'd like to upload. Click <strong><code>Open</code></strong>.
 <br /><br />
 </li><li>Next to "Publish Date/Time", click the calendar icon, and then
 select the date and time you want your file to become
@@ -77,9 +79,12 @@ upload. To do so:</p>
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+it; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
 </li><li>Find the podcast you want to edit, and under its title, click
-<strong><code>Edit</code></strong>.<br /><br />
+<strong><code>Edit</code></strong>.
+
+<br /><br />
+
 </li><li>When you're finished with your changes, click <strong><code>Save
 Changes</code></strong>.
 </li></ol>
@@ -92,7 +97,7 @@ Changes</code></strong>.
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it. For instructions, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+it; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
 </li><li>Find the podcast you want to delete, and under its title, click
 <strong><code>Delete</code></strong>.<br /><br />
 </li><li>On the Deleting Podcast screen, to confirm the deletion, click
