NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@78396 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/help/src/sakai_podcasts/aucy.html
+++ b/help/src/sakai_podcasts/aucy.html
@@ -35,7 +35,7 @@ supported within a podcast, including <code>.mp3</code>,
 
 <p><strong>Adding the Podcasts tool:</strong> You can add the Podcasts
 tool to your site using Site
-Info; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.</p>
+Info; see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.</p>
 
 <h3>Things to consider</h3>
 
