--- a/help/src/sakai_podcasts/audb.html
+++ b/help/src/sakai_podcasts/audb.html
@@ -49,7 +49,7 @@ sharing with your site participants. To add a podcast:</p>
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+it; see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.)<br /><br />
 </li><li>Near the top, click <strong><code>Add</code></strong>.<br /><br />
 </li><li>Next to "Choose a file", click <strong><code>Browse</code></strong>, and then find and
 select the file you'd like to upload. Click <strong><code>Open</code></strong>.
@@ -79,7 +79,7 @@ upload. To do so:</p>
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+it; see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.)<br /><br />
 </li><li>Find the podcast you want to edit, and under its title, click
 <strong><code>Edit</code></strong>.
 
@@ -97,7 +97,7 @@ Changes</code></strong>.
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>. (If
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
-it; see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.)<br /><br />
+it; see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.)<br /><br />
 </li><li>Find the podcast you want to delete, and under its title, click
 <strong><code>Delete</code></strong>.<br /><br />
 </li><li>On the Deleting Podcast screen, to confirm the deletion, click
