NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@87814 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/help/src/sakai_podcasts/aucy.html
+++ b/help/src/sakai_podcasts/aucy.html
@@ -39,8 +39,7 @@ Info; see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reorderi
 
 <h3>Things to consider</h3>
 
-<ul><li>You can download and view or listen to podcasts on most computers with
-podcatcher software. You do not need to own an iPod to consume podcasts.
+<ul><li>You can download and view or listen to podcasts on most computers. You do not need to own an iPod to consume podcasts.
 
 
 </li></ul>
