--- a/help/src/sakai_podcasts/audb.html
+++ b/help/src/sakai_podcasts/audb.html
@@ -99,9 +99,8 @@ Changes</code></strong>.
 you don't see <strong><code>Podcasts</code></strong> in your menubar, you may have to add
 it; see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.)<br /><br />
 </li><li>Find the podcast you want to delete, and under its title, click
-<strong><code>Delete</code></strong>.<br /><br />
-</li><li>On the Deleting Podcast screen, to confirm the deletion, click
-<strong><code>Delete</code></strong>.
+<strong><code>Delete</code></strong>. On the Deleting Podcast screen, to confirm the
+deletion, click <strong><code>Delete</code></strong>.
 </li></ol>
 
 <p>Your podcast will be removed from the Podcasts screen.</p>
@@ -119,9 +118,10 @@ site:</p>
 </li><li>From the <strong><code>Actions</code></strong> drop-down menu next to the
 <code>Podcasts</code> folder, choose <strong><code>Edit Folder Permissions</code></strong>.
 <br /><br />
-</li><li>For the "student" role, check the boxes under <strong><code>new</code></strong>,
-<strong><code>revise.own</code></strong>, and <strong><code>delete.own</code></strong>.
-<br /><br />
+</li><li>For the "student" role, check the
+boxes under <strong><code>content.new</code></strong>, <strong><code>content.revise.own</code></strong>, and
+<strong><code>content.delete.own</code></strong>.<br /><br />
+
 </li><li>Click <strong><code>Save</code></strong> to save your changes or <strong><code>Cancel</code></strong> to
 exit without saving.
 </li></ol>
