--- a/help/src/sakai_podcasts/audp.html
+++ b/help/src/sakai_podcasts/audp.html
@@ -29,8 +29,8 @@ is allowed to create, revise, and delete podcasts.</p>
 <h4>Managing access to your podcasts</h4>
 
 <ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.<br /><br />
-</li><li>Near the top, click <strong><code>Options</code></strong>, and use the radio buttons to
-choose one of the following:<br /><br />
+</li><li>Near the top, click <strong><code>Options</code></strong>, and choose one of the
+following:<br /><br />
 
 <ul><li>To provide public access to your podcast through a
 podcatcher, choose <strong><code>Display to non-members (publicly
@@ -58,8 +58,12 @@ participant roles. Permissions that are set in Resources cannot be
 changed in the Podcasts tool. Available permissions are as follows:
 <br /><br />
 
-<table class="noborder" cellpadding="4"><col /><col /><tr valign="top"><th align="left" class="noborder">New </th><td align="left" class="noborder">Add new podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Read </th><td align="left" class="noborder">View or download podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Revise.any </th><td align="left" class="noborder">Edit podcast information for all podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Revise.own </th><td align="left" class="noborder">Edit podcast information for your podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Delete.any </th><td align="left" class="noborder">Remove any podcasts</td></tr><tr valign="top"><th align="left" class="noborder">Delete.own </th><td align="left" class="noborder">Remove your own podcasts</td></tr><tr valign="top"><th align="left" class="noborder">All.groups </th><td align="left" class="noborder">View all podcasts, even those restricted to certain groups</td></tr><tr valign="top"><th align="left" class="noborder">Hidden </th><td align="left" class="noborder">View all podcasts regardless of show/hide settings on each</td></tr></table>
+
+
+<table class="noborder" cellpadding="4"><col /><col /><tr valign="top"><th align="left" class="noborder">content.new </th><td align="left" class="noborder">Add new podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.read </th><td align="left" class="noborder">View or download podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.revise.any </th><td align="left" class="noborder">Edit podcast information for all podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.revise.own </th><td align="left" class="noborder">Edit podcast information for your podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.delete.any </th><td align="left" class="noborder">Remove any podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.delete.own </th><td align="left" class="noborder">Remove your own podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.all.groups </th><td align="left" class="noborder">View all podcasts, even those restricted to certain groups</td></tr><tr valign="top"><th align="left" class="noborder">content.hidden </th><td align="left" class="noborder">View all podcasts regardless of show/hide settings on each</td></tr></table>
 <br />
+
+
 </li><li>When you're finished, click <strong><code>Save</code></strong>.
 </li></ol>
 
