--- a/help/src/sakai_podcasts/audp.html
+++ b/help/src/sakai_podcasts/audp.html
@@ -14,12 +14,10 @@
 <body>
 <div class="helpBody">
 <h2>Managing access to podcasts</h2>
-
 <p><strong>Note:</strong> To complete these procedures, you must be
 assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
-
 
 <p>With the Podcasts tool, you can restrict access to your
 podcasts to site participants only, or you can make them
@@ -28,11 +26,15 @@ is allowed to create, revise, and delete podcasts.</p>
 
 <h4>Managing access to your podcasts</h4>
 
-<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.<br /><br />
-</li><li>Near the top, click <strong><code>Options</code></strong>, and choose one of the
-following:<br /><br />
+<ol><li>From your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Podcasts</code></strong>.
 
-<ul><li>To provide public access to your podcast through a
+<br /><br />
+</li><li>Near the top, click <strong><code>Options</code></strong>, and choose one of the
+following:
+
+<br /><br />
+
+<ul><li>To provide public access to your podcasts through a
 podcatcher, choose <strong><code>Display to non-members (publicly
 viewable)</code></strong>.
 </li><li>To restrict access to site participants only, and to disable
@@ -44,33 +46,41 @@ access through a podcatcher, choose <strong><code>Display to site</code></strong
 <p><strong>Note:</strong> This will affect access to all of your
 podcasts.</p>
 
-
-
-
 <h4>Editing permissions</h4>
 
 <p>To edit permissions from within the Podcasts tool:</p>
 
-<ol><li>From your site's menubar, click <strong><code>Podcasts</code></strong>.<br /><br />
-</li><li>Near the top, click <strong><code>Permissions</code></strong>.<br /><br />
+<ol><li>From your site's menubar, click <strong><code>Podcasts</code></strong>.
+
+<br /><br />
+</li><li>Near the top, click <strong><code>Permissions</code></strong>.
+
+<br /><br />
 </li><li>On the Permissions screen, you can add permissions based on
 participant roles. Permissions that are set in Resources cannot be
 changed in the Podcasts tool. Available permissions are as follows:
+
 <br /><br />
 
 
 
-<table class="noborder" cellpadding="4"><col /><col /><tr valign="top"><th align="left" class="noborder">content.new </th><td align="left" class="noborder">Add new podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.read </th><td align="left" class="noborder">View or download podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.revise.any </th><td align="left" class="noborder">Edit podcast information for all podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.revise.own </th><td align="left" class="noborder">Edit podcast information for your podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.delete.any </th><td align="left" class="noborder">Remove any podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.delete.own </th><td align="left" class="noborder">Remove your own podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.all.groups </th><td align="left" class="noborder">View all podcasts, even those restricted to certain groups</td></tr><tr valign="top"><th align="left" class="noborder">content.hidden </th><td align="left" class="noborder">View all podcasts regardless of show/hide settings on each</td></tr></table>
+<table class="noborder" cellpadding="4"><col /><col /><tr valign="top"><th align="left" class="noborder">content.new </th><td align="left" class="noborder">Add new podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.read </th><td align="left" class="noborder">View or download podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.revise.any </th><td align="left" class="noborder">Edit podcast information for all podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.revise.own </th><td align="left" class="noborder">Edit podcast information for your podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.delete.any </th><td align="left" class="noborder">Remove any podcasts</td></tr><tr valign="top"><th align="left" class="noborder">content.delete.own </th><td align="left" class="noborder">Remove your own podcasts
+</td></tr><tr valign="top"><th align="left" class="noborder">content.all.groups </th><td align="left" class="noborder">View all podcasts, even those restricted
+to certain groups
+</td></tr><tr valign="top"><th align="left" class="noborder">content.hidden </th><td align="left" class="noborder">View all podcasts regardless of show/hide
+settings on each</td></tr></table>
 <br />
-
-
 </li><li>When you're finished, click <strong><code>Save</code></strong>.
 </li></ol>
 
 <p>To edit permissions that are set in the Resources tool:</p>
 
-<ol><li>From your site's menubar, click <strong><code>Resources</code></strong>.  <br /><br />
-</li><li>On the Resources page, click <strong><code>Permissions</code></strong>.  <br /><br />
+<ol><li>From your site's menubar, click <strong><code>Resources</code></strong>.  
+
+<br /><br />
+</li><li>On the Resources page, click <strong><code>Permissions</code></strong>.  
+
+<br /><br />
 
 <strong>Note:</strong> Permission changes made from this location will
 affect <strong>all</strong> items in the Resources tool. To edit
